# snx-edge

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/snx-edge-client/: Cargo.toml
apps/snx-edge-client/src/: api.rs  assets.rs  auth.rs  client_settings.rs  dbus.rs  main.rs  profiles.rs  prompt.rs  settings.rs  sse.rs  status.rs  theme.rs  tray.rs
apps/snx-edge-client/src/ui/: about.rs  login.rs  logs.rs  mod.rs  profiles.rs  routing.rs  servers.rs  status.rs  users.rs
apps/snx-edge-client/src/windows/: logs.rs  mod.rs  routing.rs  servers.rs  users.rs
apps/snx-edge-ctl/: Cargo.toml
apps/snx-edge-ctl/src/: api.rs  auth.rs  main.rs  models.rs  output.rs  servers.rs
apps/snx-edge-server/: Cargo.toml
apps/snx-edge-server/src/: config.rs  db.rs  error.rs  lib.rs  log_layer.rs  main.rs  state.rs  tunnel.rs
apps/snx-edge-server/src/api/: auth.rs  config.rs  events.rs  health.rs  logs.rs  mod.rs  profiles.rs  routing.rs  tunnel.rs  users.rs
apps/snx-edge-server/src/routeros/: client.rs  mod.rs  models.rs  provisioner.rs
apps/snx-edge-server/tests/: api_tests.rs
docker/: Dockerfile  Dockerfile.release  config.toml.example  docker-compose.yml  snx-edge.initd
routeros/: README.md  setup.rsc
