[workspace]
members = ["apps/snx-edge-server", "apps/snx-edge-client", "apps/snx-edge-ctl"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/happykust/snx-edge"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.19"

# Database
rusqlite = { version = "0.39", features = ["bundled", "uuid"] }

# HTTP client (for RouterOS)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# GUI (client only)
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
ksni = "0.3"
reqwest-eventsource = "0.6"
keyring = { version = "3", features = ["sync-secret-service"] }

# TLS / mTLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Secrets
secrecy = "0.10"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
dirs-next = "2"
clap = { version = "4", features = ["derive"] }
tabled = "0.20"
rpassword = "7"

# VPN core
snxcore = { git = "https://github.com/ancwrd1/snx-rs.git" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
