[package]
name = "snx-edge-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless Check Point VPN client with Management API for MikroTik containers"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
secrecy.workspace = true
axum-server.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
snxcore.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
